--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Progra3
-main.class=Presentacion.UsuarioListado
+main.class=Presentacion.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
